<resources>
    <string name="app_name">EFL Teacher</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="aboutAppMenu">About App</string>
    <string name="notificationText">Marked off your classes?</string>
    <string name="preferenceNotificationInformation">On</string>
    <string name="preferenceNotificationTitle">Notifications</string>
    <string name="navDrawStudent">Student</string>
    <string name="navDrawStudentReport">\t\tReport</string>
    <string name="navDrawStudentComment">\t\tComment</string>
    <string name="navDrawGrades">\t\tGrades</string>
    <string name="navDrawNewStudent">\t\tNew</string>
    <string name="navDrawDeleteStudent">\t\tDelete</string>
    <string name="navDrawPhoto">\t\tPhoto</string>
    <string name="navDrawLesson">Lesson</string>
    <string name="navDrawInfo">\t\tInformation</string>
    <string name="navDrawMarkOff">\t\tMark Off</string>
    <string name="navDrawAddStu">\t\tAdd Student</string>
    <string name="navDrawNewGroup">\t\tNew Group</string>
    <string name="navDrawIndividual">\t\tNew Individual</string>
    <string name="navDrawDeleteLesson">\t\tDelete</string>
    <string name="navDrawSchool">School</string>
    <string name="navDrawSchoolStudents">\t\tStudents</string>
    <string name="navDrawSchoolLessons">\t\tLessons</string>
    <string name="noImage">No Image</string>
    <string name="grades_updated">Grades Updated</string>
    <string name="title_activity_what">What</string>
    <string name="contentHomeText">Class\n\nManagement\n\nSystem</string>
    <string name="contentHomeTextLand">Class\nManagement\nSystem</string>
    <string name="title_activity_student_fragment">StudentFragment</string>
    <string name="title_activity_photo_screen">PhotoScreen</string>
    <string name="addGrades">Add Grades</string>
    <string name="name">Name</string>
    <string name="grammar">Grammar</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="listening">Listening</string>
    <string name="fluency">Fluency</string>
    <string name="comunicative">Communicative Ability</string>
    <string name="buttonAddGrades">Add Grades</string>
    <string name="enterName">Enter Name</string>
    <string name="one">1</string>
    <string name="addStudent">Add Student</string>
    <string name="enterLessonName">Enter Lesson Name</string>
    <string name="enterStudentName">Enter Student Name</string>
    <string name="addStuToLess">Add To Lesson</string>
    <string name="deleteLesson">Delete Lesson</string>
    <string name="buttonDeleteLesson">Delete Lesson</string>
    <string name="markOffLess">Mark Off </string>
    <string name="enterLessTitle">Enter Lesson Title</string>
    <string name="newGroupLess">New Group</string>
    <string name="newGroupLessXL">Group Lesson</string>
    <string name="createNewLess">Create New Lesson</string>
    <string name="newMtoMless">New Individual </string>
    <string name="lessInfoLand">Lesson Information</string>
    <string name="studentReport">Student Report</string>
    <string name="showInfo">SHOW INFORMATION</string>
    <string name="infoHere">Information will be displayed here.</string>
    <string name="lessInfo">Lesson\nInformation</string>
    <string name="schoolInfo">School Info</string>
    <string name="enStuNameAbove">Enter Student Name Above</string>
    <string name="enNewCommAbove">Enter New Comment Above</string>
    <string name="addComm">Add Comment</string>
    <string name="deleteStudent">Delete Student</string>
    <string name="createNewStu">New Student</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="photo_screen_menu">About Photo Screen</string>
    <string name="studentphoto">Student Photo</string>
    <string name="studentphotoenter">Select Student Name Above</string>
    <string name="studentphototake">Take Photo</string>
    <string name="studentphotodelete">Delete Photo</string>
    <string name="rotate_image">Rotate Image</string>
    <string name="enter_name">Enter Name</string>
    <string name="select_name_lesson">Select Lesson Name</string>
    <string name="select_name_student">Select Student Name</string>
    <string name="deleted">Deleted</string>
    <string name="yes_delete">Yes,I want to delete.</string>
    <string name="manToMan">Man To Man Lesson</string>
    <string name="noFile">No File</string>
    <string name="checkToDelete">Check Box To Delete</string>
    <string name="addLessonTitle">Add Lesson Title</string>
    <string name="invalid">Invalid Input Try Again</string>
    <string name="imageExists">Image Name Already Exists</string>
    <string name="imagedSaved">Image Saved</string>
    <string name="enterComment">Please Enter Comment</string>
    <string name="yes_i_want_to_delete">Yes, I want to delete.</string>
    <string name="mark_off_lesson">Mark Off Lesson</string>
    <string name="lesson_information">Lesson Information</string>
    <string name="lessons">Lessons</string>
    <string name="students">Students</string>
    <string name="new_individual_lesso_XL">Individual Lesson</string>
    <string name="add_to_contacts">Add To Contacts</string>
    <string name="addKids">Create a Kid\'s File</string>
    <string name="addKidsStudent">"KID "</string>
    <string name="addKidsGroupLesson">"KIDS "</string>
    <string name="studentAdd">"Student: "</string>
    <string name="added">", added."</string>
    <string name="lessonAdd">"Lesson: "</string>
    <string name="graph">"G    L    V   F   C/A"</string>
    <string name="individualCannot">Individual lesson can\'t add student.</string>
    <string name="aboutAppText">Conjunction Class Management System
        \n\nOrganize your classes, mark off your lessons and track your students progress.
        \nThis app has been created with ease of use in mind. It uses your favorite Android navigation style/, just open the drawer to reveal all your options, everything is just one click away.
        It has been designed for EFL/ESL/ELT teachers on the go! Use this as a quick reference to ensure you never teach the same lesson twice(unless your students need it).
        You can create lesson files and student files. These can be used to track the lessons you’ve taught and to monitor your students progress by adding comments to their files. You can grade your students, grammar, vocabulary, listening, fluency and communicative ability. Dates are appended to lesson reports to keep track of when lessons were taught(year/month/day format).
        Take a picture of your student to ensure you never forget a face. App uses the built in camera application to do this.
        All you need to know is displayed in the lesson and student reports for your convenience.\n\nAll app functions can be selected by using the navigation drawer for phones and 7 inch tablets. To access the drawer, please touch the
        three bars on the left hand side of the action bar at the top of the screen. For 10 inch tablets please use the list to access functions. We hope this app is
        useful for you and you have a trouble free experience.
        </string>
    <string name="license">License</string>
</resources>