<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/newMtoMless"
        android:id="@+id/textViewMtoM"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold|italic"
        android:textSize="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000"
        android:textSize="18dp"
        android:text=""
        android:id="@+id/textViewLessonNewMMMessage"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:inputType="textCapWords"
        android:id="@+id/editMtoM"
        android:maxLines="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enterLessonName"
        android:id="@+id/textView8"
        android:textSize="18dp"
        android:layout_gravity="center_horizontal"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/add_to_contacts"
        android:id="@+id/lessonCheckBoxAddToContacts"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/addKids"
        android:layout_marginTop="20dp"
        android:id="@+id/checkBoxKidIndividualCreateKids"/>

    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button"
        android:text="@string/createNewLess"
        android:textSize="18dp"
        android:id="@+id/buttonMtoM"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:textColor="@color/colorPrimaryDark"
        android:padding="20dp"/>


</LinearLayout>