<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/addStudent"
        android:id="@+id/textViewAddStudent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold|italic"
        android:textSize="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="18dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textViewAddStudentMessage"
       />
    <Spinner
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:textSize="16dp"
        android:id="@+id/spinnerLessonAddStudent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="27dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/spinner_border"
        >
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/select_name_lesson"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
       />

    <EditText
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:maxLines="1"
        android:inputType="textCapWords"
        android:layout_marginTop="30dp"
        android:id="@+id/editTextAddStudentTwo"
        android:layout_gravity="center_horizontal"
      />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:text="@string/enterStudentName"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
      />

    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button"
        android:text="@string/addStuToLess"
        android:id="@+id/buttonAddStudent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="18dp"
        android:textColor="@color/colorPrimaryDark"
        android:padding="20dp"
       />


</LinearLayout>