<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/addComm"
        android:id="@+id/textViewComment"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:textSize="44dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:text=""
        android:id="@+id/textViewCommentMessageShow"
        android:layout_gravity="center_horizontal"
        />

    <Spinner
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:textSize="16dp"
        android:id="@+id/spinnerAddComment"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/spinner_border"
        >
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/select_name_student"
        android:id="@+id/textView9"
        android:textSize="16dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:id="@+id/editTextCommentTwo"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/enNewCommAbove"
        android:id="@+id/textView10"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button"
        android:text="@string/addComm"
        android:id="@+id/buttonComment"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"
        android:padding="20dp"
        android:layout_marginTop="50dp"
        />

</LinearLayout>