<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/relative"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:scrollbars="none">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lessInfo"
            android:id="@+id/textViewReportTopLess"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="44dp"
            android:textStyle="bold|italic"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            />

    <Spinner
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:textSize="16dp"
        android:id="@+id/spinnerLessonReportHere"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/spinner_border"
        >
    </Spinner>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/select_name_lesson"
            android:id="@+id/textViewReportLessName"
          />

        <Button
            style="@style/Widget.AppCompat.Button"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/showInfo"
            android:id="@+id/buttonReportLess"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            android:padding="20dp"
            android:layout_margin="20dp"
          />

    <!--ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="12dp"
                android:layout_margin="4dp"
                android:elevation="12dp"
                android:paddingBottom="50dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="200dp"
                    android:orientation="vertical"

                    >
                    <Button
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@mipmap/share_icon"
                        android:id="@+id/shareButtonLesson"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textViewReportInfoLess"
                        android:layout_margin="20dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                />

        </LinearLayout>

    <!--/ScrollView-->

    <!--ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000"
                android:textSize="18dp"
                android:id="@+id/textViewReportInfoLess"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="200dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/textViewReportInfoLess"/>
        </RelativeLayout>


    </ScrollView-->

    </LinearLayout>
    </ScrollView>
</LinearLayout>

